--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -15,6 +15,8 @@
   --color-light-grayish-blue: hsl(233, 11%, 84%);
   --color-dark-grayish-blue: hsl(236, 9%, 61%);
   --color-very-dark-grayish-blue: hsl(235, 19%, 35%);
+  --color-gradient-start: hsl(192, 100%, 67%);
+  --color-gradient-end: hsl(280, 87%, 65%);
 
   /* Dark Theme */
   --color-very-dark-blue: hsl(235, 21%, 11%);
@@ -129,7 +131,7 @@ h1 {
   display: flex;
   flex-direction: row;
   height: 6.4rem;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding-left: 2.4rem;
   padding-right: 2.4rem;
@@ -142,8 +144,8 @@ h1 {
 .todo-list li.completed .checkbox {
   background-image: linear-gradient(
     to bottom right,
-    hsl(192, 100%, 67%),
-    hsl(280, 87%, 65%)
+    var(--color-gradient-start),
+    var(--color-gradient-end)
   );
 }
 .todo-list li.completed p {
@@ -170,4 +172,10 @@ h1 {
 footer {
   line-height: 1.5;
   text-align: center;
+}
+a {
+  color: var(--color-gradient-end);
+}
+a:visited {
+  color: var(--color-light-grayish-blue);
 }
