--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -77,6 +77,10 @@ h1 {
 .btn {
   border: none;
   background: transparent;
+  cursor: pointer;
+}
+.btn:focus {
+  outline: none;
 }
 
 /* TodoForm Component */
@@ -137,6 +141,10 @@ h1 {
   box-shadow: -1px 5px 20px 10px rgba(157, 162, 235, 0.3);
   -webkit-box-shadow: -1px 5px 20px 10px rgba(157, 162, 235, 0.3);
   -moz-box-shadow: -1px 5px 20px 10px rgba(157, 162, 235, 0.3);
+}
+.todo-list-section p {
+  padding: 2.4rem;
+  border-bottom: 0.1rem solid var(--color-very-light-grayish-blue);
 }
 .todo-list {
   list-style: none;
