--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -66,7 +66,7 @@ button {
 }
 
 .container {
-  width: 54rem;
+  max-width: 54rem;
   margin: 0 auto;
 }
 
@@ -158,6 +158,9 @@ h1 {
 }
 
 /* TodoList Component */
+.filter-control-for-mobile {
+  display: none;
+}
 .todo-list-section {
   background-color: white;
   border-radius: 1rem;
@@ -190,6 +193,9 @@ h1 {
   gap: 2.4rem;
   border-bottom: 0.1rem solid var(--color-very-light-grayish-blue);
 }
+.todo-list li:last-child {
+  border-bottom: none;
+}
 .wrapper.dark li {
   border-bottom-color: var(--color-dark-very-dark-grayish-blue-hover);
 }
@@ -219,6 +225,10 @@ h1 {
   justify-content: space-between;
   align-items: center;
   padding: 2.4rem;
+  border-top: 0.1rem solid var(--color-very-light-grayish-blue);
+}
+.wrapper.dark .todo-filter-control {
+  border-top-color: var(--color-dark-very-dark-grayish-blue-hover);
 }
 .control-btn.group {
   display: flex;
@@ -240,4 +250,40 @@ a {
 }
 a:visited {
   color: var(--color-light-grayish-blue);
+}
+
+/**
+ * For MOBILE
+ */
+@media screen and (max-width: 600px) {
+  .wrapper {
+    padding-left: 2.4rem;
+    padding-right: 2.4rem;
+  }
+  .todo-list-section {
+    margin-bottom: 2.4rem;
+  }
+  .todo-filter-control .filter-control-for-desktop {
+    display: none;
+  }
+  .filter-control-for-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 1rem;
+    padding: 2.4rem;
+    box-shadow: -1px 5px 20px 10px rgba(157, 162, 235, 0.3);
+    -webkit-box-shadow: -1px 5px 20px 10px rgba(157, 162, 235, 0.3);
+    -moz-box-shadow: -1px 5px 20px 10px rgba(157, 162, 235, 0.3);
+    margin-bottom: 4.8rem;
+  }
+
+  /* Dark Theme */
+  .wrapper.dark .filter-control-for-mobile {
+    background-color: var(--color-very-dark-desaturated-blue);
+    box-shadow: -1px 5px 20px 10px rgba(37, 39, 60, 0.2);
+    -webkit-box-shadow: -1px 5px 20px 10px rgba(37, 39, 60, 0.2);
+    -moz-box-shadow: -1px 5px 20px 10px rgba(37, 39, 60, 0.2);
+  }
 }
